[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/enemies/big_mook/SpikedBigMookWalk.png" type="Texture" id=1]
[ext_resource path="res://sprites/enemies/big_mook/BigMookDead.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemies/big_mook/OneEyeMissing.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies/big_mook/TwoEyeMissing.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemies/big_mook/ThreeEyeMissing.png" type="Texture" id=5]
[ext_resource path="res://src/enemies/BigMook.gd" type="Script" id=6]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "charge_ram"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2 ]
}

[sub_resource type="Animation" id=9]
resource_name = "dizzy"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 1 ],
"method": "wobble_offset_x"
}, {
"args": [ 0 ],
"method": "wobble_offset_x"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "ram"
length = 0.35
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:frame")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.5, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 15 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "take_damage"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[node name="BigMook" type="KinematicBody2D" groups=["boss"]]
collision_layer = 64
script = ExtResource( 6 )
SPEED = 55
RAM_SPEED = 140
ACCELERATION = 10
RAM_ACCELERATION = 10
JUMP_GRAVITY = 900
GRAVITY = 1300
JUMP_VELOCITY = -225
ATTACK_CYCLES = [ 12, 6 ]
one_eye_missing = ExtResource( 3 )
two_eyes_missing = ExtResource( 4 )
three_eyes_missing = ExtResource( 5 )
dead_mook = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 1, -4 )
hframes = 7
frame = 1

[node name="Eyes" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
offset = Vector2( 1, -4 )
hframes = 7
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/charge_ram = SubResource( 7 )
anims/dizzy = SubResource( 9 )
anims/idle = SubResource( 4 )
anims/ram = SubResource( 8 )
anims/walk = SubResource( 2 )

[node name="ChangeAttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 1 )
shape = SubResource( 6 )

[node name="DizzyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DizzyFlipTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/take_damage = SubResource( 10 )

[node name="ShadowTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="PreJumpTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ChangeAttackTimer" to="." method="_on_ChangeAttackTimer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DizzyTimer" to="." method="_on_DizzyTimer_timeout"]
[connection signal="timeout" from="DizzyFlipTimer" to="." method="_on_DizzyFlipTimer_timeout"]
[connection signal="timeout" from="ShadowTimer" to="." method="_on_ShadowTimer_timeout"]
[connection signal="timeout" from="PreJumpTimer" to="." method="_on_PreJumpTimer_timeout"]
